# botui

./: .CMakeLists.txt.swo  .clang-format  .gitignore  CMakeLists.txt  README.md  Readme.markdown  botui.1  changelog.txt
.github/workflows/: action.yml  bob.yml  clangformat.yml
NetworkManager/: generate.sh  nm-access-point.xml  nm-device-ethernet.xml  nm-device-wifi.xml  nm-secret-agent.xml  nm-settings-connection.xml  nm-settings.xml
NetworkManager/include/: NMAccessPoint.h  NMDevice.h  NMDeviceEthernet.h  NMDeviceWifi.h  NMNetworkManager.h  NMSecretAgent.h  NMSettings.h  NMSettingsConnection.h
NetworkManager/src/: NMDevice.cpp  NMDeviceEthernet.cpp  NMDeviceWifi.cpp  NMNetworkManager.cpp  NMSecretAgent.cpp  NMSettings.cpp  NMSettingsConnection.cpp
dbus/: CMakeCache.txt  CMakeLists.txt  Makefile  NMSettingsConnection.cpp  NMSettingsConnection.h  accesspointinterface.cpp  accesspointinterface.h  accesspointinterface.moc_parameters  activeinterface.cpp  activeinterface.h  activeinterface.moc_parameters  agentmanagerinterface.cpp  agentmanagerinterface.h  agentmanagerinterface.moc_parameters  cmake_install.cmake  connectioninterface.cpp  connectioninterface.h  connectioninterface.moc_parameters  deviceinterface.moc_parameters  dhcp4configinterface.moc_parameters  dhcp6configinterface.moc_parameters  generate.sh  genericinterface.moc_parameters  ip4configinterface.moc_parameters  ip6configinterface.moc_parameters  networkmanagerinterface.moc_parameters  nm-device-wifi.xml  nm-manager.xml  org.freedesktop.NetworkManager.DHCP4Config.xml  org.freedesktop.NetworkManager.DHCP6Config.xml  org.freedesktop.NetworkManager.Device.xml  org.freedesktop.NetworkManager.Settings.Connection.xml  org.freedesktop.NetworkManager.xml  org.kipr.Serial.xml  pppinterface.moc_parameters  secretagentinterface.moc_parameters  serialinterface.moc_parameters  settingsinterface.moc_parameters  vpn-errorsinterface.moc_parameters  wifip2pinterface.moc_parameters  (+3 more)
dbus/botui_autogen/: moc_predefs.h
dbus/include/: NMAccessPoint.h  NMDevice.h  NMDeviceEthernet.h  NMDeviceWifi.h  NMNetworkManager.h  NMSecretAgent.h  NMSettings.h  NMSettingsConnection.h  Serial.h
dbus/include/botui/: moc_AboutWidget.cpp_parameters  (+126 more)
dbus/rc/: construction.qrc.depends
dbus/src/: NMAccessPoint.cpp  NMDevice.cpp  NMDeviceEthernet.cpp  NMSecretAgent.cpp  NMSettings.cpp  NMSettingsConnection.cpp  Serial.cpp
debian/: botui.substvars  changelog  control  debhelper-build-stamp  files
include/: AboutWidget.h  AccessoriesWidget.h  ArchivesManager.h  ArchivesModel.h  ArrayHelpers.h  BatteryLevelProvider.h  BatteryWidget.h  BuildOptions.h  BusyIndicator.h  ButtonProvider.h  Calibrate.h  CameraConfigModel.h  CameraInputManager.h  CameraInputSelectorWidget.h  CameraWidget.h  Channel.h  ChannelConfigWidget.h  ChannelConfigWidgetFactory.h  ChannelConfigurationsWidget.h  ChannelSettingsWidget.h  Channels.h  ChannelsModel.h  ChannelsWidget.h  Clipboard.h  CombinedMotorWidget.h  CommunicationProvider.h  CommunicationSettingsWidget.h  CompileProvider.h  CompilingWidget.h  ConcurrentCompile.h  ConfigurationPaths.h  ConnectWidget.h  ConnectionedARDroneInputProvider.h  ConsoleWidget.h  CreateTestWizardPage.h  CreateWidget.h  CursorManager.h  CvWidget.h  DefaultArchivesManager.h  Device.h  (+69 more)
include/botui/: .DeclarativeView.h.swp  AboutWidget.h  AccessoriesWidget.h  AdvancedSettingsWidget.h  ArchivesManager.h  ArchivesModel.h  AreYouSureDialog.h  ArrayHelpers.h  BackupWidget.h  BatteryLevelProvider.h  BatterySettingsWidget.h  BatteryWidget.h  BuildOptions.h  BusyIndicator.h  ButtonProvider.h  Calibrate.h  CameraConfigModel.h  CameraImageWidget.h  CameraInputManager.h  CameraInputModel.h  CameraInputSelectorWidget.h  CameraLiveWidget.h  CameraSettingsWidget.h  CameraWidget.h  ChannelConfigWidget.h  ChannelConfigWidgetFactory.h  ChannelConfigurationsModel.h  ChannelConfigurationsWidget.h  ChannelSettingsWidget.h  ChannelsWidget.h  Clipboard.h  CombinedMotorWidget.h  CommunicationProvider.h  CommunicationSettingsWidget.h  CompileHelpers.h  CompileProvider.h  CompilingWidget.h  ConcurrentCompile.h  Config.h  ConfigurationPaths.h  (+102 more)
rc/: fonts.qrc  icons.qrc  qml.qrc  target.c  target.qrc
rc/qml/: Switch.qml  loading.qml  lock.qml
src/: .DeclarativeView.cpp.swp  .RootController.cpp.swp  AboutWidget.cpp  AccessoriesWidget.cpp  AdvancedSettingsWidget.cpp  ArchivesManager.cpp  ArchivesModel.cpp  AreYouSureDialog.cpp  BackupWidget.cpp  BatteryLevelProvider.cpp  BatterySettingsWidget.cpp  BatteryWidget.cpp  BusyIndicator.cpp  ButtonProvider.cpp  Calibrate.cpp  CameraConfigModel.cpp  CameraImageWidget.cpp  CameraInputManager.cpp  CameraInputSelectorWidget.cpp  CameraLiveWidget.cpp  CameraSettingsWidget.cpp  CameraWidget.cpp  Channel.cpp  ChannelConfigWidget.cpp  ChannelConfigWidgetFactory.cpp  ChannelConfigurationsModel.cpp  ChannelConfigurationsWidget.cpp  ChannelSettingsWidget.cpp  Channels.cpp  ChannelsModel.cpp  ChannelsWidget.cpp  Clipboard.cpp  CombinedMotorWidget.cpp  CommunicationProvider.cpp  CommunicationSettingsWidget.cpp  CompileHelpers.cpp  CompileProvider.cpp  CompilingWidget.cpp  ConcurrentCompile.cpp  Config.cpp  (+113 more)
ts/: botui_en.ts  botui_zh.ts  link_en.ts  link_zh.ts
ui/: AboutWidget.ui  AboutWidget.ui.autosave  AccessoriesWidget.ui  AdvancedSettingsWidget.ui  AllSensorsWidget.ui  AreYouSureDialog.ui  BackupWidget.ui  BatterySettingsWidget.ui  CameraInputSelectorWidget.ui  CameraLiveWidget.ui  CameraSettingsWidget.ui  CameraWidget.ui  ChannelConfigurationsWidget.ui  ChannelHsvWidget.ui  ChannelSettingsWidget.ui  ChannelSetupWidget.ui  ChannelsWidget.ui  CombinedMotorWidget.ui  CommunicationSettingsWidget.ui  CompilingWidget.ui  ConnectWidget.ui  Create3ExampleWidget.ui  Create3SensorList.ui  Create3SensorListWidget.ui  Create3Widget.ui  CreateChannelDialog.ui  CreateTestWizardPage.ui  DepthSensorWidget.ui  DeveloperListWidget.ui  EditorWidget.ui  FactoryWidget.ui  FileManagerWidget.ui  GUI.ui  GuiSettingsWidget.ui  HomeWidget.ui  HsvChannelConfigWidget.ui  KeyboardDialog.ui  KissIdeSettingsWidget.ui  LanguageWidget.ui  LogDialog.ui  (+32 more)
(+57 files in other folders)
